# gql-in-python

./: .gitignore  README.md  pyproject.toml  validate_queries.py
src/gql_in_python/: __init__.py  ast_renderer.py  directive.py  field.py  field_arguments.py  fragment.py  gql_list.py  operation.py  types.py
tests/: __init__.py  test_ast_renderer.py  test_field.py  test_field_arguments.py  test_fragment.py  test_gql_list.py  test_gql_types.py  test_integration.py  test_operation.py
